update bs formula presentation : - example with the baker - forward and options - beginning of options pricing formula

--- a/options_pricing/notebooks/presentation_bs_formula.ipynb
+++ b/options_pricing/notebooks/presentation_bs_formula.ipynb
@@ -17,11 +17,14 @@
     "## Assets and portfolio\n",
     "We we use a model with two type of assets : \n",
     "- Risky asset : a stock denoted by $S$\n",
-    "- Risk free asset : a bond, a bank account ('Livret A') ... denoted $B$ with a short interest rate $r$\n",
+    "- Risk free asset : a bond, a bank account (*Livret A*) ... denoted $B$ with a short interest rate $r$\n",
+    "\n",
     "\n",
     "We can use these assets to build a portfolio $h(x,y)$ where $x$ is the number of risk free asset and $y$ is the number of risky asset. \n",
     "The value of the portfolio at time $t$ is : \n",
     "$$ V_t^h = xB_t + yS_t$$\n",
+    "\n",
+    "By misuse of language, we say that $B$ represent the bond and $S$ the stock but to be exact, $B$ and $S$ are price process of a bond and a stock. So $B_t$ and $S_t$ are respectively the bond price at time $t$ and the stock price at time $t$\n",
     "\n",
     "## Continuous time market model\n",
     "\n",
@@ -31,10 +34,10 @@
     "- $S^o = B$ is the risk free asset\n",
     "- $ S^i \\quad i=1,...,N$ are risky assets\n",
     "\n",
-    "The risk asset has the following dynamic : \n",
+    "The risk free asset price has the following dynamic : \n",
     "$$ dB_t = r_tB_tdt $$\n",
     "\n",
-    "And the risky asset has the dynamic : \n",
+    "And the risky asset price has the dynamic : \n",
     "$$ dS_t^i = S_t^i \\mu_t^i + S_t^i\\sigma_t^idW_t^{\\mathbb{P}, i}$$\n",
     "Where $\\mu$ is the local rate of return and $\\sigma$ the volatility of the risky asset\n",
     "\n",
@@ -50,69 +53,124 @@
     "## Pricing of financial derivatives, contingent claim\n",
     "\n",
     "### General definition\n",
-    "A financial derivative or contingent claim is financial product whose value is derived from the value of an underlying asset. The derivative is a contract between parties (in general two) and its value is determined by the value of the underlying asset.\n",
+    "A derivative, or contingent claim can be defined as a financial instrument whose value depends on (or derives from) the values of other, more basic, underlying variables. Very often the variables underlying derivatives are the prices of traded assets. A stock option, for example, is a derivative whose value is dependent on the price of a stock. However, derivatives can be dependent on almost any variable, from the price of hogs to the amount of snow falling at a certain ski resort.\n",
     "\n",
     "In our case, the underlying asset will be the risky asset $S$ and we will denote $\\mathcal{X}$ the contingent claim where the time to the maturity of the contract is denoted $T$. It means that at time $T$ it will be possible to determine the amount of money to be paid out. And this price is determine by the contract function $\\Phi$ such that : \n",
     "$$ \\mathcal{X} = \\Phi(S(T))$$\n",
     "It means that at time $T$ the holder of the contract will obtain $\\mathcal{X}$ $,€... \n",
     "\n",
-    "Our goal is to determine a \"fair\" price for this contract. This price is denoted \n",
+    "Our goal is to determine a \"fair\" price for this contract. This price of $\\mathcal{X}$ at time $t$ is denoted \n",
     "$$\\Pi(t;\\mathcal{X})$$\n",
     "\n",
     "\n",
-    "### European options"
+    "### Forward contracts \n",
+    "\n",
+    "The simplest contract is the so called *forward contract*. It is an agreement between two parties to buy or sell an asset at \n",
+    "- a certain futur time, called the *maturity* $T$\n",
+    "- a certain price, called the *strike* $S$\n",
+    "\n",
+    "In function of wich side of the contract we take, we will be able to represent the profit or loss derived from this contract. This is called the *payoff*\n",
+    "\n",
+    "One of the parties to a forward contract assumes a *long position* and agrees to buy the underlying asset on the certain specified future date for the certain specified price. The other party assumes a *short position* and agrees to sell the asset on the same date for the same price.\n",
+    "\n",
+    "To illustrate this contract, lets consider two parties : \n",
+    "- A baker\n",
+    "- A seller of flour : mills, wholesaler...\n",
+    "\n",
+    "Lets take the side of the baker. He wants to protect himself from the flour price fluctuation in 6 months. One possibility is to use a forward contract.\n",
+    "\n",
+    "Suppose that the current sprice (*spot price*) of the ton of flour costs 100€. \n",
+    "\n",
+    "Suppose that the baker wants to buy the ton of flour at the time price : 100€ in 6 months. To do so, the baker will meet a mills to create a forward contract where the buyer of the contract will be the baker and the seller the mills. The strike of this contract will be $K = 100$ and the maturity $T = 0.5$. Moreover, $S_t$ represents the price of the ton of flour at the time $t$. So in 6 months, the baker will have the obligation to buy 1 ton of flour to the wholesaler at 100€, respectively, the wholesaler will have to provide a ton of flour at the price of 100€. \n",
+    "\n",
+    "Now, suppose that in 6 months, the ton of flour is now worth 110€. In this case, the wholesaler has to pay 110€ the ton of flour in the market and to sell it at the price of 100€ to the baker. Finally, the wholesaler has a loss of $110 - 100 = 10$€ and the baker a profit of $10$.\n",
+    "Instead, if the ton of flour falls at the price of 80€, then the baker has the obligation to buy it at 100€ to the wholesaler who buy it at 80€. Here the wholesaler makes a profit of 20€ whereas the baker lose 20€. \n",
+    "\n",
+    "Formally, the payoff from a long position (buyer side) in a forward contract on one unit of an asset is : \n",
+    "$$S_T - K$$ \n",
+    "where $K$ is the delivery price (strike) and $S_T$ the spot price of the underlying asset $S$ at the maturity $T$\n",
+    "\n",
+    "Similarly, the payoff from a short position in a forward contract on one unit of an asset is\n",
+    "$$K-S_T$$\n",
+    "\n",
+    "Theses payoffs can be positive or negative, they are illustrated in the figure below : \n",
+    "\n",
+    "<p align=\"center\">\n",
+    "  <img src=\"../images/forward_payoffs.png\" width=\"50%\">\n",
+    "</p>\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Options contracts\n",
+    "\n",
+    "In the above example we can clearly see a problem for the baker : he has the obligation to buy at the determined price $K$, even if it is no advantageous for him ($K>S_T$). So the baker would want not to use the contract if it is not advantageous for him and instead, buy the ton of flour at the market price $S_T$.\n",
+    "\n",
+    "So one solution would be to, instead of having the **obligation**, the owner / buyer of the contrat has the **right** to buy at the predetermined price $K$. \n",
+    "\n",
+    "This type of contract exists and is called an **option**\n",
+    "\n",
+    "\n",
+    "There are two types of option. A call option gives the holder the right to buy the underlying asset by a certain date for a certain price. A put option gives the holder the right to sell the underlying asset by a certain date for a certain price. This price in the contract is known as the strike price $K$ and the date in the contract is known as the expiration date or maturity $T$.\n",
+    "\n",
+    "It should be emphasized that an option gives the holder the right to do something. The holder does not have to exercise this right. This is what distinguishes options from forwards contracts, where the holder is obligated to buy or sell the underlying asset. Whereas it costs nothing to enter into a forward or futures contract, there is a cost to acquiring an option. We can denote this price as $$\\Pi(t;\\mathcal{X})$$ where $\\mathcal{X}$ is a call or a put options.\n",
+    "\n",
+    "In general we will be interested in $\\Pi(0;\\mathcal{X})$\n",
+    "\n",
+    "Now lets take again the example above. Suppose that the price to enter the contract for the baker is 2€, i.e $\\Pi(0;\\mathcal{X}) = 5$. \n",
+    "\n",
+    "In the case that in 6 months, the price of the ton of flour is 110€, it would be advantageous to exercice the option and so the payoff would $110-100 = 10$€ and the net profit (taking in account the price to enter the contract) would be $(110 - 100) -5 = 5$ €\n",
+    "\n",
+    "Now if the price falls to 90€, then the baker would prefer buy the ton of flour at the market price rather than exercice the option and pay 100€. So the payoff would be 0€ and the net profit would be -5€ (the price he paid for the option he doesn't use)\n",
+    "\n",
+    "\n",
+    "Formally, the payoff from a short position (buyer side) in a call option on one unit of an asset is : \n",
+    "$$\\Phi({S(T)}) = \\left\\{\\begin{matrix}\n",
+    "    S_T - K \\quad \\text{if} \\quad S_T > K\\\\\n",
+    "    0 \\quad \\text{otherwise}\n",
+    "    \n",
+    "\\end{matrix}\\right.$$\n",
+    "\n",
+    "This example is illustrated in the figure below : \n",
+    "<p align=\"center\">\n",
+    "  <img src=\"../images/options_payoff.png\" width=\"50%\">\n",
+    "</p>"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
+   "source": [
+    "### Pricing of options contracts\n",
+    "\n",
+    "Now the main question is : what price should we give to an option ? \n",
+    "\n",
+    "Before answering to this specific question, we have to state some famous mathematical finance results.  \n",
+    "\n",
+    "WE introduce the price function $F(t,S_t) = \\Pi_t$. We suppose we are in the Black-Scholes model. \n",
+    "\n",
+    "By using Itô formula, we obtain the famous de Black-Scholes-Merton equation :\n",
+    "$$\\frac{\\partial F(t,s)}{\\partial t} + \\frac{1}{2}\\sigma^2 s^2 \\frac{\\partial^2 F(t,s)}{\\partial s^2} + r s \\frac{\\partial F(t,s)}{\\partial s} - r F(t,s) = 0$$\n",
+    "\n",
+    "Our goal is to find an explicit formula for the price function $F$. \n",
+    "\n",
+    "To do so we first remark that the B-S-M equation is independant of $\\mu$. We can interpret this by saying that investors are neutral against the risk. \n",
+    "We introduce a new asset $X$ such that : \n",
+    "$$dX_t = r X_tdt + \\sigma X_t dW^{\\mathbb{Q}}_t$$\n",
+    "\n",
+    "where $\\mathbb{Q}$ is the risk neutral probability measure. \n",
+    "\n",
+    "By applying Itô formula to $e^{-rt}F(t,S_t)$, we obtain risk neutral valuation formula : \n",
+    "\n",
+    "$$F(t,S_0) = e^{-r(T-t)}\\mathbb{E}^\\mathbb{Q}[\\Phi(S(T))]$$\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
