end of pricing formula, example of pricing with the baker

--- a/options_pricing/notebooks/presentation_bs_formula.ipynb
+++ b/options_pricing/notebooks/presentation_bs_formula.ipynb
@@ -47,7 +47,7 @@
     "$$dB_t = rB_tdt$$\n",
     "$$dS_t = \\mu S_t dt + \\sigma S_tdW_t^{\\mathbb{P}}$$\n",
     "\n",
-    "Where $\\mu$ and $\\sigma$ are two constants\n",
+    "Where $\\mu$ is the expected rate of return  and $\\sigma$ the volatility of the asset, are two constants\n",
     "\n",
     "\n",
     "## Pricing of financial derivatives, contingent claim\n",
@@ -121,11 +121,11 @@
     "\n",
     "In general we will be interested in $\\Pi(0;\\mathcal{X})$\n",
     "\n",
-    "Now lets take again the example above. Suppose that the price to enter the contract for the baker is 2€, i.e $\\Pi(0;\\mathcal{X}) = 5$. \n",
+    "Now lets take again the example above. Suppose that the price to enter the contract for the baker is 5€, i.e $\\Pi(0;\\mathcal{X}) = 5$. \n",
     "\n",
     "In the case that in 6 months, the price of the ton of flour is 110€, it would be advantageous to exercice the option and so the payoff would $110-100 = 10$€ and the net profit (taking in account the price to enter the contract) would be $(110 - 100) -5 = 5$ €\n",
     "\n",
-    "Now if the price falls to 90€, then the baker would prefer buy the ton of flour at the market price rather than exercice the option and pay 100€. So the payoff would be 0€ and the net profit would be -5€ (the price he paid for the option he doesn't use)\n",
+    "Now if the price falls to 90€, then the baker would prefer to buy the ton of flour at the market price rather than exercice the option and pay 100€. So the payoff would be 0€ and the net profit would be -5€ (the price he paid for the option he doesn't use)\n",
     "\n",
     "\n",
     "Formally, the payoff from a short position (buyer side) in a call option on one unit of an asset is : \n",
@@ -151,16 +151,19 @@
     "\n",
     "Before answering to this specific question, we have to state some famous mathematical finance results.  \n",
     "\n",
-    "WE introduce the price function $F(t,S_t) = \\Pi_t$. We suppose we are in the Black-Scholes model. \n",
+    "We introduce the price function $F(t,S_t) = \\Pi_t$. We suppose we are in the Black-Scholes model. \n",
     "\n",
     "By using Itô formula, we obtain the famous de Black-Scholes-Merton equation :\n",
     "$$\\frac{\\partial F(t,s)}{\\partial t} + \\frac{1}{2}\\sigma^2 s^2 \\frac{\\partial^2 F(t,s)}{\\partial s^2} + r s \\frac{\\partial F(t,s)}{\\partial s} - r F(t,s) = 0$$\n",
     "\n",
     "Our goal is to find an explicit formula for the price function $F$. \n",
     "\n",
-    "To do so we first remark that the B-S-M equation is independant of $\\mu$. We can interpret this by saying that investors are neutral against the risk. \n",
-    "We introduce a new asset $X$ such that : \n",
-    "$$dX_t = r X_tdt + \\sigma X_t dW^{\\mathbb{Q}}_t$$\n",
+    "To do so we first remark that the B-S-M equation is independant of $\\mu$. We can interpret this by saying that investors are neutral against the risk. Indeed, expected rate of return is the only variable affected by the risk aversion of the investors. The difference between the volatility and the expected rate of return is that the volatility is not independant of the stock price. And the stock price is supposed to be balanced (efficiency) and as the stock price is determined by investors choices, it is function fo their aversion to the risk. So it is the stock price that takes in account the aversion to the risk. For the expected rate of return, the higher the aversion is, the more the investor will require a high return. \\\\\n",
+    "So if the aversion of risk do not appears in the the B-S-M equation, it means that it does not affect the solution. So we can chose any level of risk aversion. In particular, we can say that investors are neutral against the risk. In this case, in a risk neutral world, the expected rate of return is equal to risk-free interest rate : $\\mu = r$ \n",
+    "\n",
+    "\n",
+    "We can now define the asset $S$ under a new probability measure : \n",
+    "$$dS_t = r S_tdt + \\sigma S_t dW^{\\mathbb{Q}}_t$$\n",
     "\n",
     "where $\\mathbb{Q}$ is the risk neutral probability measure. \n",
     "\n",
@@ -168,8 +171,38 @@
     "\n",
     "$$F(t,S_0) = e^{-r(T-t)}\\mathbb{E}^\\mathbb{Q}[\\Phi(S(T))]$$\n",
     "\n",
+    "For a call option, we now have to apply this formula with : \n",
+    "$\\Phi({S(T)}) = \\left\\{\\begin{matrix}\n",
+    "    S_T - K \\quad \\text{if} \\quad S_T > K\\\\\n",
+    "    0 \\quad \\text{otherwise}\n",
+    "\\end{matrix}\\right.$ \n",
     "\n",
-    "\n"
+    "\n",
+    "\n",
+    "And we find the Black-Scholes formula for call option : \n",
+    "$$F_c(t,S_0) = S_0\\mathcal{N}(d_1) - Ke^{-r(T-t)}\\mathcal{N}(d_2)$$\n",
+    "\n",
+    "With : \n",
+    "$$d_1 = \\frac{1}{\\sigma\\sqrt{T-t}}\\left[\\ln\\left(\\frac{S_0}{K}\\right) + \\left(r + \\frac{\\sigma^2}{2}\\right)(T-t)\\right]$$\n",
+    "$$d_2 = d_1 - \\sigma\\sqrt{T-t}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Pricing the example of the Baker\n",
+    "\n",
+    "In our exemple, the current price of the ton of flour is 100€ so $S_0=100$ and want the baker wants to have the option to buy it in 6 months at 100€. So the maturity is 0.5 years, $T=0.5$ and the strike is 100€, $K=100$. Now lets suppose that the volatility of the ton of flour is $20\\%$ : $\\sigma = 0.2$ and the risk-free interest rate is the *livret A* interest rate : $3\\%$ so $r=0.03$\n",
+    "\n",
+    "The actual price of this option, denoted $\\Pi_f(0)$ is : \n",
+    "$$\\Pi_f(0) = F_c(0,100) = 100\\mathcal{N}(d_1) - 100e^{-0.04(0.5-0)}\\mathcal{N}(d_2)$$\n",
+    "With : \n",
+    "$$d_1 = \\frac{1}{0.2\\sqrt{0.5-0}}\\left[\\ln\\left(\\frac{100}{100}\\right) + \\left(0.04 + \\frac{0.2^2}{2}\\right)(0.5-0)\\right] \\approx 0.212$$\n",
+    "$$d_2 = d_1 - 0.2\\sqrt{0.5-0} \\approx 0.0707$$\n",
+    "\n",
+    "Finally $$\\Pi_f(0) \\approx 6.65$$\n",
+    "So the price of our the call option, i.e the price to enter the contract, under the Black-Scholes model is approximately 6.65€"
    ]
   }
  ],
