add comment to explain how test on the rest

--- a/options_pricing/notebooks/main_dl.ipynb
+++ b/options_pricing/notebooks/main_dl.ipynb
@@ -101,7 +101,7 @@
    "outputs": [],
    "source": [
     "params = {\n",
-    "    'test_size' : 0.1,\n",
+    "    'test_size' : 0.1, # If we choose 0, we test on all the rest of the data (not used for training or validation)\n",
     "    'test_value' : 200, # if we choose no to train_test_split\n",
     "    'n_rows' : 10000,\n",
     "    'epochs': 1000,\n",
