--- a/options_pricing/notebooks/main_linear_reg.ipynb
+++ b/options_pricing/notebooks/main_linear_reg.ipynb
@@ -30,22 +30,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [],
    "source": [
     "params = {\n",
-    "    'test_size' : 0.3,\n",
-    "    'n_rows' : 900000,\n",
-    "    'standardize' : False,\n",
-    "    'fit_intercept' : True, # Default is True but our data are already centered 'If set to False, no intercept will be used in calculations (i.e. data is expected to be centered).'\n",
+    "    'test_size' : 0.2, # If we choose 0, we test on all the rest of the data (not used for training or validation\n",
+    "    'n_rows' : len(df_options_c),\n",
+    "    'standardize' : True,\n",
+    "    'fit_intercept' : False, # Default is True but our data are already centered 'If set to False, no intercept will be used in calculations (i.e. data is expected to be centered).'\n",
     "    'features': ['strike','vol', 'delta', 'gamma', 'theta', 'vega', 'rho', 'stock_price','time_to_maturity', 'interest_rate'],\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,16 +61,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((330924, 10), (141825, 10), (330924,), (141825,))"
+       "((378199, 10), (94550, 10), (378199,), (94550,))"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 207,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,13 +90,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<style>#sk-container-id-13 {\n",
+       "<style>#sk-container-id-31 {\n",
        "  /* Definition of color scheme common for light and dark mode */\n",
        "  --sklearn-color-text: black;\n",
        "  --sklearn-color-line: gray;\n",
@@ -126,15 +126,15 @@
        "  }\n",
        "}\n",
        "\n",
-       "#sk-container-id-13 {\n",
+       "#sk-container-id-31 {\n",
        "  color: var(--sklearn-color-text);\n",
        "}\n",
        "\n",
-       "#sk-container-id-13 pre {\n",
+       "#sk-container-id-31 pre {\n",
        "  padding: 0;\n",
        "}\n",
        "\n",
-       "#sk-container-id-13 input.sk-hidden--visually {\n",
+       "#sk-container-id-31 input.sk-hidden--visually {\n",
        "  border: 0;\n",
        "  clip: rect(1px 1px 1px 1px);\n",
        "  clip: rect(1px, 1px, 1px, 1px);\n",
@@ -146,7 +146,7 @@
        "  width: 1px;\n",
        "}\n",
        "\n",
-       "#sk-container-id-13 div.sk-dashed-wrapped {\n",
+       "#sk-container-id-31 div.sk-dashed-wrapped {\n",
        "  border: 1px dashed var(--sklearn-color-line);\n",
        "  margin: 0 0.4em 0.5em 0.4em;\n",
        "  box-sizing: border-box;\n",
@@ -154,7 +154,7 @@
        "  background-color: var(--sklearn-color-background);\n",
        "}\n",
        "\n",
-       "#sk-container-id-13 div.sk-container {\n",
+       "#sk-container-id-31 div.sk-container {\n",
        "  /* jupyter's `normalize.less` sets `[hidden] { display: none; }`\n",
        "     but bootstrap.min.css set `[hidden] { display: none !important; }`\n",
        "     so we also need the `!important` here to be able to override the\n",
@@ -164,7 +164,7 @@
        "  position: relative;\n",
        "}\n",
        "\n",
-       "#sk-container-id-13 div.sk-text-repr-fallback {\n",
+       "#sk-container-id-31 div.sk-text-repr-fallback {\n",
        "  display: none;\n",
        "}\n",
        "\n",
@@ -180,14 +180,14 @@
        "\n",
        "/* Parallel-specific style estimator block */\n",
        "\n",
-       "#sk-container-id-13 div.sk-parallel-item::after {\n",
+       "#sk-container-id-31 div.sk-parallel-item::after {\n",
        "  content: \"\";\n",
        "  width: 100%;\n",
        "  border-bottom: 2px solid var(--sklearn-color-text-on-default-background);\n",
        "  flex-grow: 1;\n",
        "}\n",
        "\n",
-       "#sk-container-id-13 div.sk-parallel {\n",
+       "#sk-container-id-31 div.sk-parallel {\n",
        "  display: flex;\n",
        "  align-items: stretch;\n",
        "  justify-content: center;\n",
@@ -195,28 +195,28 @@
        "  position: relative;\n",
        "}\n",
        "\n",
-       "#sk-container-id-13 div.sk-parallel-item {\n",
+       "#sk-container-id-31 div.sk-parallel-item {\n",
        "  display: flex;\n",
        "  flex-direction: column;\n",
        "}\n",
        "\n",
-       "#sk-container-id-13 div.sk-parallel-item:first-child::after {\n",
+       "#sk-container-id-31 div.sk-parallel-item:first-child::after {\n",
        "  align-self: flex-end;\n",
        "  width: 50%;\n",
        "}\n",
        "\n",
-       "#sk-container-id-13 div.sk-parallel-item:last-child::after {\n",
+       "#sk-container-id-31 div.sk-parallel-item:last-child::after {\n",
        "  align-self: flex-start;\n",
        "  width: 50%;\n",
        "}\n",
        "\n",
-       "#sk-container-id-13 div.sk-parallel-item:only-child::after {\n",
+       "#sk-container-id-31 div.sk-parallel-item:only-child::after {\n",
        "  width: 0;\n",
        "}\n",
        "\n",
        "/* Serial-specific style estimator block */\n",
        "\n",
-       "#sk-container-id-13 div.sk-serial {\n",
+       "#sk-container-id-31 div.sk-serial {\n",
        "  display: flex;\n",
        "  flex-direction: column;\n",
        "  align-items: center;\n",
@@ -234,14 +234,14 @@
        "\n",
        "/* Pipeline and ColumnTransformer style (default) */\n",
        "\n",
-       "#sk-container-id-13 div.sk-toggleable {\n",
+       "#sk-container-id-31 div.sk-toggleable {\n",
        "  /* Default theme specific background. It is overwritten whether we have a\n",
        "  specific estimator or a Pipeline/ColumnTransformer */\n",
        "  background-color: var(--sklearn-color-background);\n",
        "}\n",
        "\n",
        "/* Toggleable label */\n",
-       "#sk-container-id-13 label.sk-toggleable__label {\n",
+       "#sk-container-id-31 label.sk-toggleable__label {\n",
        "  cursor: pointer;\n",
        "  display: block;\n",
        "  width: 100%;\n",
@@ -251,7 +251,7 @@
        "  text-align: center;\n",
        "}\n",
        "\n",
-       "#sk-container-id-13 label.sk-toggleable__label-arrow:before {\n",
+       "#sk-container-id-31 label.sk-toggleable__label-arrow:before {\n",
        "  /* Arrow on the left of the label */\n",
        "  content: \"▸\";\n",
        "  float: left;\n",
@@ -259,13 +259,13 @@
        "  color: var(--sklearn-color-icon);\n",
        "}\n",
        "\n",
-       "#sk-container-id-13 label.sk-toggleable__label-arrow:hover:before {\n",
+       "#sk-container-id-31 label.sk-toggleable__label-arrow:hover:before {\n",
        "  color: var(--sklearn-color-text);\n",
        "}\n",
        "\n",
        "/* Toggleable content - dropdown */\n",
        "\n",
-       "#sk-container-id-13 div.sk-toggleable__content {\n",
+       "#sk-container-id-31 div.sk-toggleable__content {\n",
        "  max-height: 0;\n",
        "  max-width: 0;\n",
        "  overflow: hidden;\n",
@@ -274,12 +274,12 @@
        "  background-color: var(--sklearn-color-unfitted-level-0);\n",
        "}\n",
        "\n",
-       "#sk-container-id-13 div.sk-toggleable__content.fitted {\n",
+       "#sk-container-id-31 div.sk-toggleable__content.fitted {\n",
        "  /* fitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-0);\n",
        "}\n",
        "\n",
-       "#sk-container-id-13 div.sk-toggleable__content pre {\n",
+       "#sk-container-id-31 div.sk-toggleable__content pre {\n",
        "  margin: 0.2em;\n",
        "  border-radius: 0.25em;\n",
        "  color: var(--sklearn-color-text);\n",
@@ -287,79 +287,79 @@
        "  background-color: var(--sklearn-color-unfitted-level-0);\n",
        "}\n",
        "\n",
-       "#sk-container-id-13 div.sk-toggleable__content.fitted pre {\n",
+       "#sk-container-id-31 div.sk-toggleable__content.fitted pre {\n",
        "  /* unfitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-0);\n",
        "}\n",
        "\n",
-       "#sk-container-id-13 input.sk-toggleable__control:checked~div.sk-toggleable__content {\n",
+       "#sk-container-id-31 input.sk-toggleable__control:checked~div.sk-toggleable__content {\n",
        "  /* Expand drop-down */\n",
        "  max-height: 200px;\n",
        "  max-width: 100%;\n",
        "  overflow: auto;\n",
        "}\n",
        "\n",
-       "#sk-container-id-13 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {\n",
+       "#sk-container-id-31 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {\n",
        "  content: \"▾\";\n",
        "}\n",
        "\n",
        "/* Pipeline/ColumnTransformer-specific style */\n",
        "\n",
-       "#sk-container-id-13 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
+       "#sk-container-id-31 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
        "  color: var(--sklearn-color-text);\n",
        "  background-color: var(--sklearn-color-unfitted-level-2);\n",
        "}\n",
        "\n",
-       "#sk-container-id-13 div.sk-label.fitted input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
+       "#sk-container-id-31 div.sk-label.fitted input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
        "  background-color: var(--sklearn-color-fitted-level-2);\n",
        "}\n",
        "\n",
        "/* Estimator-specific style */\n",
        "\n",
        "/* Colorize estimator box */\n",
-       "#sk-container-id-13 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
+       "#sk-container-id-31 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
        "  /* unfitted */\n",
        "  background-color: var(--sklearn-color-unfitted-level-2);\n",
        "}\n",
        "\n",
-       "#sk-container-id-13 div.sk-estimator.fitted input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
+       "#sk-container-id-31 div.sk-estimator.fitted input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
        "  /* fitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-2);\n",
        "}\n",
        "\n",
-       "#sk-container-id-13 div.sk-label label.sk-toggleable__label,\n",
-       "#sk-container-id-13 div.sk-label label {\n",
+       "#sk-container-id-31 div.sk-label label.sk-toggleable__label,\n",
+       "#sk-container-id-31 div.sk-label label {\n",
        "  /* The background is the default theme color */\n",
        "  color: var(--sklearn-color-text-on-default-background);\n",
        "}\n",
        "\n",
        "/* On hover, darken the color of the background */\n",
-       "#sk-container-id-13 div.sk-label:hover label.sk-toggleable__label {\n",
+       "#sk-container-id-31 div.sk-label:hover label.sk-toggleable__label {\n",
        "  color: var(--sklearn-color-text);\n",
        "  background-color: var(--sklearn-color-unfitted-level-2);\n",
        "}\n",
        "\n",
        "/* Label box, darken color on hover, fitted */\n",
-       "#sk-container-id-13 div.sk-label.fitted:hover label.sk-toggleable__label.fitted {\n",
+       "#sk-container-id-31 div.sk-label.fitted:hover label.sk-toggleable__label.fitted {\n",
        "  color: var(--sklearn-color-text);\n",
        "  background-color: var(--sklearn-color-fitted-level-2);\n",
        "}\n",
        "\n",
        "/* Estimator label */\n",
        "\n",
-       "#sk-container-id-13 div.sk-label label {\n",
+       "#sk-container-id-31 div.sk-label label {\n",
        "  font-family: monospace;\n",
        "  font-weight: bold;\n",
        "  display: inline-block;\n",
        "  line-height: 1.2em;\n",
        "}\n",
        "\n",
-       "#sk-container-id-13 div.sk-label-container {\n",
+       "#sk-container-id-31 div.sk-label-container {\n",
        "  text-align: center;\n",
        "}\n",
        "\n",
        "/* Estimator-specific */\n",
-       "#sk-container-id-13 div.sk-estimator {\n",
+       "#sk-container-id-31 div.sk-estimator {\n",
        "  font-family: monospace;\n",
        "  border: 1px dotted var(--sklearn-color-border-box);\n",
        "  border-radius: 0.25em;\n",
@@ -369,18 +369,18 @@
        "  background-color: var(--sklearn-color-unfitted-level-0);\n",
        "}\n",
        "\n",
-       "#sk-container-id-13 div.sk-estimator.fitted {\n",
+       "#sk-container-id-31 div.sk-estimator.fitted {\n",
        "  /* fitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-0);\n",
        "}\n",
        "\n",
        "/* on hover */\n",
-       "#sk-container-id-13 div.sk-estimator:hover {\n",
+       "#sk-container-id-31 div.sk-estimator:hover {\n",
        "  /* unfitted */\n",
        "  background-color: var(--sklearn-color-unfitted-level-2);\n",
        "}\n",
        "\n",
-       "#sk-container-id-13 div.sk-estimator.fitted:hover {\n",
+       "#sk-container-id-31 div.sk-estimator.fitted:hover {\n",
        "  /* fitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-2);\n",
        "}\n",
@@ -467,7 +467,7 @@
        "\n",
        "/* \"?\"-specific style due to the `<a>` HTML tag */\n",
        "\n",
-       "#sk-container-id-13 a.estimator_doc_link {\n",
+       "#sk-container-id-31 a.estimator_doc_link {\n",
        "  float: right;\n",
        "  font-size: 1rem;\n",
        "  line-height: 1em;\n",
@@ -482,31 +482,31 @@
        "  border: var(--sklearn-color-unfitted-level-1) 1pt solid;\n",
        "}\n",
        "\n",
-       "#sk-container-id-13 a.estimator_doc_link.fitted {\n",
+       "#sk-container-id-31 a.estimator_doc_link.fitted {\n",
        "  /* fitted */\n",
        "  border: var(--sklearn-color-fitted-level-1) 1pt solid;\n",
        "  color: var(--sklearn-color-fitted-level-1);\n",
        "}\n",
        "\n",
        "/* On hover */\n",
-       "#sk-container-id-13 a.estimator_doc_link:hover {\n",
+       "#sk-container-id-31 a.estimator_doc_link:hover {\n",
        "  /* unfitted */\n",
        "  background-color: var(--sklearn-color-unfitted-level-3);\n",
        "  color: var(--sklearn-color-background);\n",
        "  text-decoration: none;\n",
        "}\n",
        "\n",
-       "#sk-container-id-13 a.estimator_doc_link.fitted:hover {\n",
+       "#sk-container-id-31 a.estimator_doc_link.fitted:hover {\n",
        "  /* fitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-3);\n",
        "}\n",
-       "</style><div id=\"sk-container-id-13\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LinearRegression()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-13\" type=\"checkbox\" checked><label for=\"sk-estimator-id-13\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow fitted\">&nbsp;&nbsp;LinearRegression<a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.4/modules/generated/sklearn.linear_model.LinearRegression.html\">?<span>Documentation for LinearRegression</span></a><span class=\"sk-estimator-doc-link fitted\">i<span>Fitted</span></span></label><div class=\"sk-toggleable__content fitted\"><pre>LinearRegression()</pre></div> </div></div></div></div>"
+       "</style><div id=\"sk-container-id-31\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LinearRegression(fit_intercept=False)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-31\" type=\"checkbox\" checked><label for=\"sk-estimator-id-31\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow fitted\">&nbsp;&nbsp;LinearRegression<a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.4/modules/generated/sklearn.linear_model.LinearRegression.html\">?<span>Documentation for LinearRegression</span></a><span class=\"sk-estimator-doc-link fitted\">i<span>Fitted</span></span></label><div class=\"sk-toggleable__content fitted\"><pre>LinearRegression(fit_intercept=False)</pre></div> </div></div></div></div>"
       ],
       "text/plain": [
-       "LinearRegression()"
+       "LinearRegression(fit_intercept=False)"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 209,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -517,17 +517,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MAPE:  3.506132460708684\n",
-      "MAE:  1.4400079900111298\n",
-      "MSE:  8.451774895083743\n",
-      "R2:  0.9418254917613718\n",
+      "MAPE:  20.052478562114704\n",
+      "MAE:  5.612408559452782\n",
+      "MSE:  38.108298952360244\n",
+      "R2:  0.7192850965505221\n",
       "-----------------------------------\n",
       "\n",
       "\n"
@@ -536,10 +536,10 @@
     {
      "data": {
       "text/plain": [
-       "(3.506132460708684, 1.4400079900111298, 8.451774895083743, 0.9418254917613718)"
+       "(20.052478562114704, 5.612408559452782, 38.108298952360244, 0.7192850965505221)"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 210,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,20 +551,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9418254917613718\n"
+      "0.7192850965505221\n"
      ]
     }
    ],
    "source": [
     "r2 = lin_reg_model.score(X_test, y_test)\n",
     "print(r2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The first observation, regarding the parameters standardize & fit_intercept is \n",
+    "\n",
+    "| standardize      | fit_intercept      | MSE      |\n",
+    "| -------------- | -------------- | -------------- |\n",
+    "| False | True |  8.3346 |\n",
+    "| True | True | 8.3346 |\n",
+    "| False | False | 8.3571 |\n",
+    "| True | False | 38.1083 |\n"
    ]
   }
  ],
