implementng another way to perform anova

--- a/options_pricing/notebooks/main_linear_reg.ipynb
+++ b/options_pricing/notebooks/main_linear_reg.ipynb
@@ -41,7 +41,7 @@
    "source": [
     "params = {\n",
     "    'test_size' : 0.1, # If we choose 0, we test on all the rest of the data (not used for training or validation\n",
-    "    'n_rows' : 10000,\n",
+    "    'n_rows' : 100000,\n",
     "    'standardize' : False,\n",
     "    'fit_intercept' : True, # Default is True but our data are already centered 'If set to False, no intercept will be used in calculations (i.e. data is expected to be centered).'\n",
     "    'features': ['strike','vol', 'delta', 'gamma', 'theta', 'vega', 'rho', 'stock_price','time_to_maturity', 'interest_rate'],\n",
@@ -72,7 +72,7 @@
     {
      "data": {
       "text/plain": [
-       "((9425, 10), (1048, 10), (9425,), (1048,))"
+       "((90297, 10), (10033, 10), (90297,), (10033,))"
       ]
      },
      "execution_count": 5,
@@ -88,6 +88,26 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.frame.DataFrame"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(X_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "lin_reg_model = LinearRegression(fit_intercept=params['fit_intercept'])"
@@ -95,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -511,7 +531,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -522,17 +542,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MAPE:  13.807881066356066\n",
-      "MAE:  5.817440882200349\n",
-      "MSE:  107.8532636393608\n",
-      "R2:  0.9584313927014882\n",
+      "MAPE:  5.076579693560475\n",
+      "MAE:  2.2229877376952327\n",
+      "MSE:  21.24881803416238\n",
+      "R2:  0.9510575672590376\n",
       "-----------------------------------\n",
       "\n",
       "\n"
@@ -541,10 +561,10 @@
     {
      "data": {
       "text/plain": [
-       "(13.807881066356066, 5.817440882200349, 107.8532636393608, 0.9584313927014882)"
+       "(5.076579693560475, 2.2229877376952327, 21.24881803416238, 0.9510575672590376)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -577,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -602,6 +622,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Case when data are not normalize : \n",
     "We can interpret this graph as follow. The bars represent the increase or decrease of the option price when the variables increase. \n",
     "\n",
     "Effect size problems : strike (tens €) vs volatility (0.4)"
@@ -623,12 +644,14 @@
     "H_0 : \\text{The variable has no correlation with the option price}\\\\ \n",
     "H_1 : \n",
     "\\end{matrix}\\right.\n",
-    "$"
+    "$\n",
+    "\n",
+    "$ F =$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -689,11 +712,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Analysis of variance\n"
+    "# Convertir les données en DataFrame pour l'utilisation avec statsmodels\n",
+    "from statsmodels.formula.api import ols\n",
+    "from statsmodels.stats.anova import anova_lm\n",
+    "df_train = pd.DataFrame(X_train)\n",
+    "df_train['y'] = y_train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[14], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m formula \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124my ~ \u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m + \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mjoin(\u001b[43mdf\u001b[49m\u001b[38;5;241m.\u001b[39mcolumns[:\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m])\n\u001b[1;32m      2\u001b[0m \u001b[38;5;66;03m# 'y ~ strike + vol + delta + gamma + theta + vega + rho + stock_price + time_to_maturity + interest_rate'\u001b[39;00m\n\u001b[1;32m      3\u001b[0m model_sm \u001b[38;5;241m=\u001b[39m ols(formula, data\u001b[38;5;241m=\u001b[39mdf_train)\u001b[38;5;241m.\u001b[39mfit()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "formula = 'y ~ ' + ' + '.join(df.columns[:-1])\n",
+    "# 'y ~ strike + vol + delta + gamma + theta + vega + rho + stock_price + time_to_maturity + interest_rate'\n",
+    "model_sm = ols(formula, data=df_train).fit()\n",
+    "\n",
+    "# Effectuer l'ANOVA\n",
+    "anova_results = anova_lm(model_sm)\n",
+    "print(anova_results)"
    ]
   },
   {
@@ -705,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
