improve linear reg analysis

--- a/options_pricing/notebooks/presentation_bs_formula.ipynb
+++ b/options_pricing/notebooks/presentation_bs_formula.ipynb
@@ -325,8 +325,7 @@
     "\n",
     "for volatility in volatility_values:\n",
     "    call_prices = [bs_options_pricing(S, K, r, T, volatility, option_type='c') for K in K_values]\n",
-    "    ax1.plot(K_values, call_prices, label=f'Volatility = {round(volatility, 2)}')\n",
-    "\n",
+    "    ax1.plot(K_values, call_prices, label=f'V                                   \n",
     "ax1.set_xlabel('Valeur de K')\n",
     "ax1.set_ylabel(\"Prix de l'option call\")\n",
     "ax1.set_title(\"Évolution du prix de l'option call en fonction de K\")\n",
